[project]
name = "sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ebal5", email = "6240240+ebal5@users.noreply.github.com" }
]
dependencies = [
    "pandas>=2.0.3",
    "selenium>=4.16.0",
    "webdriver-manager>=4.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
